--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,30 @@
+asgiref==3.4.1
+astroid==2.4.2
+autopep8==1.5.5
+backports.entry-points-selectable==1.1.0
+click==8.0.1
+colorama==0.4.3
+distlib==0.3.2
 Django==3.2.5
-gunicorn==20.1.0
-Pillow==8.3.1
-whitenoise==5.3.0
+filelock==3.0.12
 Flask==2.0.1
+gunicorn==20.1.0
+isort==4.3.21
+itsdangerous==2.0.1
+Jinja2==3.0.1
+lazy-object-proxy==1.4.3
+MarkupSafe==2.0.1
+mccabe==0.6.1
+Pillow==8.3.1
+platformdirs==2.0.2
+psycopg2==2.9.1
+pycodestyle==2.6.0
+pylint==2.5.3
+pytz==2021.1
+six==1.15.0
+sqlparse==0.4.1
+toml==0.10.1
+virtualenv==20.6.0
+Werkzeug==2.0.1
+whitenoise==5.3.0
+wrapt==1.12.1
